Add Checker Framework 3.26.0 and Tainting Checker